--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/new_or_edit/ui-for-new-or-edit-entity.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/new_or_edit/ui-for-new-or-edit-entity.html
@@ -26,7 +26,7 @@
   }
 </style>
 </head>
-<body>
+<body style="margin-left: 20px">
 <div ng-include="'header.html'"></div>
 
 	<div id="wrap" ng-controller="NewOrEditController">
@@ -201,7 +201,7 @@
 	                    
 		});
 	</script>
-		  ================================================== -->
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script>
