--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
@@ -138,15 +138,15 @@
 #elseif ($tableColumn.getWidgetType() == "integer")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 					<label>${tableColumn.getLabel()}</label>
-					<input type="number" class="form-control" 
+					<input type="number" class="form-control" pattern="\d*" step="1"
 						ng-model="selectedEntry.${tableColumn.getName()}"
-						ng-readonly="operation == 'show'" required="required"></textarea>
+						ng-readonly="operation == 'show'" required="required">
 #elseif ($tableColumn.getWidgetType() == "float")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 					<label>${tableColumn.getLabel()}</label>
-					<input type="number" class="form-control" step="any"
+					<input type="number" class="form-control" pattern="[0-9]+([\.,][0-9]+)?" step="0.01"
 						ng-model="selectedEntry.${tableColumn.getName()}"
-						ng-readonly="operation == 'show'" required="required"></textarea>
+						ng-readonly="operation == 'show'" required="required">
 #else
 #if ($tableColumn.getSize() < 40)
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
@@ -159,7 +159,7 @@
 						ng-readonly="operation == 'show'" required="required">
 #end
 #end
-					</div>
+				  </div>
 #end
 #end
 				</div>
