--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/settings.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/settings.html
@@ -10,7 +10,7 @@
   	</div>	
 	<div class="form-group">
 		<label>Avatar image</label>
-		<div class="form-control">
+		<div class="form-control" style="height:initial">
 			<input type="file" nv-file-select uploader="settingsVm.uploader" style="display:inline-block"/>
 	        <img ng-src="{{settingsVm.user.avatarUrl}}" ng-show="settingsVm.user && settingsVm.user.avatarUrl" />
 	     </div>
