--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/toolbar.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/toolbar.html
@@ -8,5 +8,5 @@
 
 <div class="pull-right button-group">
 	<button class="btn btn-primary" ui-sref="list.new">New</button>		  
-	<button class="btn btn-primary" ui-sref="list.settings"><i class="fa fa-cog"></i></button>	  	
+	<button class="btn btn-primary" ui-sref="list.settings" ng-if="toolbarVm.loggedUser"><i class="fa fa-cog"></i></button>
 </div>
