--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/master_details_details/ui-for-entity-master-details-details.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/master_details_details/ui-for-entity-master-details-details.html
@@ -31,7 +31,7 @@
   }
 </style>
 </head>
-<body">
+<body>
 <div ng-include="'header.html'"></div>
 
 	<div id="wrap" ng-controller="ManageController">
