--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="css/angular-timeline.css">
 <link rel="stylesheet" href="css/angular-timeline-bootstrap.css">
 <link rel="stylesheet" href="css/angular-timeline-animations.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.1.1/ng-tags-input.min.css">
 
 <link rel="stylesheet" href="css/default.css">
 
@@ -49,6 +50,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-file-upload/2.3.4/angular-file-upload.js"></script>	
 	<script src="js/angular-timeline.js"></script>	
 	<script src="js/angular-scroll-animate.js"></script>	
+	
+	<script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
 	
 	<script src="js/app.js"></script>
 	<script src="js/http-resources.js"></script>	
