--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/.settings/org.eclipse.wst.common.component
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="dirigible-runtime-tomcat">
+    <wb-module deploy-name="ROOT">
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/target/temp/web.xml"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="component.exclusion.patterns" value="**/*.source_*.jar"/>
-        <property name="java-output-path" value="/runtime/target/classes"/>
         <property name="context-root" value="ROOT"/>
+        <property name="java-output-path" value="/Releng - Runtime/target/classes"/>
     </wb-module>
 </project-modules>
