condition check for the initial content reset https://bugs.eclipse.org/bugs/show_bug.cgi?id=512118

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/master_details_master/ui-for-entity-master-details-master.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/master_details_master/ui-for-entity-master-details-master.html
@@ -345,7 +345,7 @@
 				primaryKey = "${tableColumn.getName()}";
 #end 
 #end
-				var deleteUrl = url+"?"+primaryKey+"="+entry[primaryKey];
+				var deleteUrl = url+"/"+entry[primaryKey];
 				$http.delete(deleteUrl)
 				.success(function(){
 					refreshData();
